--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="css/style.css" />
+
+    <title>Nexter</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <div class="container">
+      <header class="header red">Header</header>
+      <div class="small-box--1 red">Small box 1</div>
+      <div class="small-box--2 red">Small box 2</div>
+      <div class="small-box--3 red">Small box 3</div>
+      <div class="sidebar red">Sidebar</div>
+      <main class="main red">Main content</main>
+      <footer class="footer red">Footer</footer>
+    </div>
   </body>
 </html>
