--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Nexter</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+
+    <title>Nexter &mdash; your home, your freedom</title>
   </head>
-  <body>
-    <div class="container">
-      <header class="header red">Header</header>
-      <div class="small-box--1 red">Small box 1</div>
-      <div class="small-box--2 red">Small box 2</div>
-      <div class="small-box--3 red">Small box 3</div>
-      <div class="sidebar red">Sidebar</div>
-      <main class="main red">Main content</main>
-      <footer class="footer red">Footer</footer>
-    </div>
-  </body>
+  <body class="container"></body>
 </html>
