--- a/index.html
+++ b/index.html
@@ -14,5 +14,23 @@
 
     <title>Nexter &mdash; your home, your freedom</title>
   </head>
-  <body class="container"></body>
+  <body class="container">
+    <div class="sidebar">sidebar</div>
+
+    <header class="header">header</header>
+
+    <div class="realtors">Top 3 realtors</div>
+
+    <section class="features">features</section>
+
+    <div class="story__pictures">pictures</div>
+
+    <div class="story__content">content</div>
+
+    <section class="homes">homes</section>
+
+    <section class="gallery">gallery</section>
+
+    <footer class="footer">footer</footer>
+  </body>
 </html>
