Add footer section

--- a/index.html
+++ b/index.html
@@ -374,6 +374,33 @@
       </figure>
     </section>
 
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link"> find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"> request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"> download home planner</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"> contact us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"> submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link"> come work with us!</a>
+        </li>
+      </ul>
+
+      <div class="footer__copyright">
+        Copyright by Nexter. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Similique facere hic tempora labore dolorum quibusdam corrupti
+        quod, sequi quas praesentium!
+      </div>
+    </footer>
   </body>
 </html>
